@@ -1,3 +1,8 @@
+2019-09-11 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/gtksheet/gtkitementry.c: Add ancillary pointer to GtkStyle in
+      _item_entry_get_insertion_cursor_gc.
+
 2019-09-10 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/gattrib.c: Revise/update internal documentation.
